<resources>
    <string name="app_name">CruPhysics</string>
    <string name="play">play</string>
    <string name="pause">pause</string>

    <string name="circle_object">Circle object</string>
    <string name="rectangle_object">Rectangle object</string>
    <string name="polygon_object">Polygon object</string>

    <string-array name="add_object_list">
        <item>@string/circle_object</item>
        <item>@string/rectangle_object</item>
        <item>@string/polygon_object</item>
    </string-array>

    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="density">density</string>
    <string name="type">type</string>
    <string name="friction">friction</string>
    <string name="restitution">restitution</string>
    <string name="choose_number_of_sides_tip">Please choose the number of sides:</string>
    <string name="color">Color</string>
    <string name="next">Next</string>

    <string-array name="object_type_list">
        <item>static</item>
        <item>dynamic</item>
    </string-array>

    <string-array name="object_menu_item_list">
        <item>Delete</item>
        <item>Property</item>
    </string-array>

    <string name="create_new">New</string>

    <string name="x">x</string>
    <string name="y">y</string>
    <string name="gravity">gravity</string>
    <string name="settings">Settings</string>
</resources>
