<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_add_circle_object">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5">

        <TextView
            android:id="@+id/body_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/type"
            android:theme="@style/PropertyLabelTextViewStyle" />

        <Spinner
            android:id="@+id/body_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/label_density"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/edit_density"
            android:text="@string/density"
            android:theme="@style/PropertyLabelTextViewStyle" />

        <EditText
            android:id="@+id/edit_density"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/label_restitution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/edit_restitution"
            android:text="@string/restitution"
            android:theme="@style/PropertyLabelTextViewStyle" />

        <EditText
            android:id="@+id/edit_restitution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/label_friction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/edit_friction"
            android:text="@string/friction"
            android:theme="@style/PropertyLabelTextViewStyle" />

        <EditText
            android:id="@+id/edit_friction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="numberDecimal" />


        <TextView
            android:id="@+id/label_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:theme="@style/PropertyLabelTextViewStyle" />

        <View
            android:id="@+id/color_block"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />
    </GridLayout>

</merge>
