<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="crupest.cruphysics.fragment.AddBodyPropertyFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:importantForAutofill="noExcludeDescendants"
        android:useDefaultMargins="true"
        tools:targetApi="O">

        <TextView
            android:id="@+id/body_type_label"
            style="@style/bodyPropertyLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/body_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/label_density"
            style="@style/bodyPropertyLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:labelFor="@id/edit_density"
            android:text="@string/density" />

        <EditText
            android:id="@+id/edit_density"
            style="@style/bodyPropertyValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:inputType="numberDecimal"
            tools:text="1.0" />

        <TextView
            android:id="@+id/label_restitution"
            style="@style/bodyPropertyLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:labelFor="@id/edit_restitution"
            android:text="@string/restitution" />

        <EditText
            android:id="@+id/edit_restitution"
            style="@style/bodyPropertyValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:inputType="numberDecimal"
            tools:text="0.0" />

        <TextView
            android:id="@+id/label_friction"
            style="@style/bodyPropertyLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:labelFor="@id/edit_friction"
            android:text="@string/friction" />

        <EditText
            android:id="@+id/edit_friction"
            style="@style/bodyPropertyValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:inputType="numberDecimal"
            tools:text="0.2" />


        <TextView
            android:id="@+id/label_color"
            style="@style/bodyPropertyLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/color" />

        <View
            android:id="@+id/color_block"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            tools:background="#FF0000FF" />

    </GridLayout>

</ScrollView>
